--- a/oxYn.html
+++ b/oxYn.html
@@ -26,6 +26,10 @@
         font-size:25px;
         font-family: Arian, Helvetica, sans-serif;
       }
+      body {
+        background-image: url("http://eskipaper.com/images/peugeot-onyx-concept-1.jpg");
+        color:white;
+      }
     </style>
     
     <!--The below errors do not mess with anything, they are just syntax errors and the code works perectly fine.-->
